--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -16,6 +16,7 @@ ext {
             timber          : '4.7.1',
             glide           : '4.8.0',
             sherlock        : '1.0.4@aar',
+            constraintLayout: '2.0.0-beta5',
 
             espresso        : '3.0.2',
             testRunner      : '1.0.2',
@@ -37,13 +38,15 @@ ext {
     restMock = [restMock: "com.github.andrzejchm.RESTMock:android:$versions.restMock"]
 
     supportDeps = [
+            appSupportV4     : "com.android.support:support-v4:$versions.support",
             cardView         : "com.android.support:cardview-v7:$versions.support",
             appcompatV7      : "com.android.support:appcompat-v7:$versions.support",
             design           : "com.android.support:design:$versions.support",
             recyclerView     : "com.android.support:recyclerview-v7:$versions.support",
             supportAnnotation: "com.android.support:support-annotations:$versions.support",
             gridLayout       : "com.android.support:gridlayout-v7:$versions.support",
-            multiDex         : "com.android.support:multidex:$versions.multiDex"
+            multiDex         : "com.android.support:multidex:$versions.multiDex",
+            constraint       : "androidx.constraintlayout:constraintlayout:$versions.constraintLayout"
     ]
 
     rxJava = [
